# gitty

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dependencies.lua  meson.build  premake5.lua
src/: document.hpp  gitty.cpp  gitty.h  gtpch.h  keyboard.cpp  keyboard.h  neutron.cpp
src/components/: commit.cpp  commit.hpp  stage.cpp  stage.hpp
src/core/: files.hpp  repository.cpp  repository.hpp
src/debug/: log.h
src/events/: event.cpp  event.h  event_callback.h  event_dispatcher.h  event_type.h  hotkey.h  hotkey_event.h
src/util/: convert.hpp
